--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,15 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "cloudinary-react": "^1.6.6",
+    "history": "^5.0.0",
+    "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-modal-login": "^1.4.5",
     "react-scripts": "3.4.1",
-    "react-select": "^3.1.0"
+    "react-select": "^3.1.0",
+    "universal-router": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
