--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,6 +1,7 @@
 :concurrency: 3
 :timeout: 8 # heroku
 :verbose: true
+:max_retries: 1
 :queues: # Queue priority: https://github.com/mperham/sidekiq/wiki/Advanced-Options
   - default
   - mailers
