--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "cloudinary-react": "^1.6.6",
+    "esri-leaflet-geocoder": "^2.3.3",
     "history": "^5.0.0",
     "leaflet": "^1.6.0",
     "react": "^16.13.1",
@@ -27,6 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
