fetch data & display path

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,11 +19,17 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USER'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  port: <%= ENV['DATABASE_PORT'] || '5432' %>
+  #host: <%= ENV['DATABASE_HOST'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
 
 development:
   <<: *default
-  database: godwd2_development
+  #database: godwd2_development
   #host: db
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -31,14 +37,14 @@ development:
   # the same name as the operating system user that initialized the database.
   #username: godwd2
   # The password associated with the postgres role (username).
-  password: <%= ENV['GODWD2_DATABASE_PASSWORD'] %>
+  #password: <%= ENV['GODWD2_DATABASE_PASSWORD'] %>
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
   #host: localhost
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  port: 5432
+  #port: 5432
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
   # Minimum log levels, in increasing order:
@@ -52,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: godwd2_test
+  #database: godwd2_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -75,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: godwd2_production
-  username: godwd2
-  password: <%= ENV['GODWD2_DATABASE_PASSWORD'] %>
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USER'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
