--- a/client/package.json
+++ b/client/package.json
@@ -23,12 +23,12 @@
     "universal-router": "^9.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "export HTTPS=true && SSL_CRT_FILE=cert.pem && SSL_KEY_FILE=key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://127.0.0.1:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
