trial spinner on upload

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@
 key.*
 keytmp.pem
 cert.*
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
