--- a/package.json
+++ b/package.json
@@ -1,3 +1,8 @@
 {
-  "dependencies": {}
+  "dependencies": {},
+  "scripts": {
+    "build": "yarn --cwd client install && yarn --cwd client build",
+    "deploy": "cp -a client/build/. public/",
+    "heroku-postbuild": "yarn build && yarn deploy"
+  }
 }
