--- a/config/database.yml
+++ b/config/database.yml
@@ -79,4 +79,5 @@ test:
 #
 production:
   <<: *default
-  url: <%= ENV['POSTGRESQL_ADDON_URI'] %>
+  url: <%= ENV['DATABASE_URL'] %> # heroku
+  #url: <%= ENV['POSTGRESQL_ADDON_URI'] %> Clevercloud
