--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ default: &default
   database: <%= ENV['DATABASE_NAME'] %>
   username: <%= ENV['DATABASE_USER'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
-  port: <%= ENV['DATABASE_PORT'] || '5432' %>
+  #port: <%= ENV['DATABASE_PORT'] || '5432' %>
   #host: <%= ENV['DATABASE_HOST'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
@@ -79,5 +79,6 @@ test:
 #
 production:
   <<: *default
+  database: godwd2_production
   url: <%= ENV['DATABASE_URL'] %> # heroku
   #url: <%= ENV['POSTGRESQL_ADDON_URI'] %> Clevercloud
